@@ -19,6 +19,7 @@ $modules{$_} = $_ for qw(
   Path::Tiny
   Test2::V0
   Test::Script
+  URI
 );
 
 
